--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,13 @@ form div {
 form div label {
 	margin-left : 5px;
 }
+
+@media screen and (max-width: 1280px)
+
+{
+	background-color : pink ;
+    /* Rédigez vos propriétés CSS ici */
+
+}
+
+
